tests/errors/intrinsics14.f90
program intrinsics14
    print *, scale([1, 2, 3], 2)
end
